--- a/demo.html
+++ b/demo.html
@@ -137,7 +137,22 @@
     </section>
     <!-- 头部nav部分 end-->
     <!-- top部分 -->
+    <!-- banner部分 -->
+
+    <section class="banner">
+        <div class="flexslider" id="main-slider">
+            <ul class="slides">
+                <li><a href="#"><img src="img/banner_02.webp"  title="Redmi 红米 8A"></a></li>
+                <li><a href="#"><img src="img/banner_03.webp"  title="电视预售狂欢"></a></li>
+                <li><a href="#"><img src="img/banner_04.webp" title="米家互联网洗烘一体机"></a></li>
+                <li><a href="#"><img src="img/banner_05.webp" title="小米9 直降300元"></a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- banner部分 end-->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- <script src="js/demo.js"></script> -->
+    <script src="js/jquery.flexslider-min.js"></script>
+    <script src="js/demo.js"></script>
 </body>
 </html>
