--- a/demo.html
+++ b/demo.html
@@ -79,8 +79,8 @@
     </header>
     <!-- 头部header部分 end-->
     <!-- 头部nav部分 -->
-    <section class="site-navbar" style="background-color: beige;">
-        <div class="container nav clearfix" style="background-color: rgb(163, 229, 231);">
+    <section class="site-navbar">
+        <div class="container nav clearfix" >
             <!-- logo部分 -->
             <a href="#" class="clearfix logo" title="小米官网">
                 <span class="hide">小米官网</span>
@@ -149,8 +149,40 @@
             </ul>
         </div>
     </section>
-
     <!-- banner部分 end-->
+    <!-- host部分 -->
+    <section class="home-hero container">
+        <ul class="home-hero-sub clearfix">
+            <!-- left_btn部分 -->
+            <li class="left_btn left">
+               <ul class="clearfix">
+                   <li class="left"><a href="#"><span></span>小米秒杀</a></li>
+                   <li class="left"><a href="#"><span></span>企业团购</a></li>
+                   <li class="left"><a href="#"><span></span>F码通道</a></li>
+                   <li class="left"><a href="#"><span></span>米粉卡</a></li>
+                   <li class="left"><a href="#"><span></span>以旧换新</a></li>
+                   <li class="left"><a href="#"><span></span>话费充值</a></li>
+               </ul> 
+            </li>
+            <!-- left_btn部分 end-->
+            <li class="left item">
+                <a href="#">
+                    <img src="./img/item_01.jpg">
+                </a>
+            </li>
+            <li class="left item">
+                <a href="#">
+                    <img src="./img/item_02.jpg">
+                </a>
+            </li>
+            <li class="left item">
+                <a href="#">
+                    <img src="./img/item_03.jpg">
+                </a>
+            </li>
+        </ul>
+    </section>
+    <!-- host部分 end-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/demo.js"></script>
