--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1488789_7gxlunv63eg.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1488789_279i1i6yt68.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/demo.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -183,6 +183,208 @@
         </ul>
     </section>
     <!-- host部分 end-->
+    <!-- page-main部分 -->
+    <section class="page-main">
+        <div class="container">
+            <!-- 小米闪购 -->
+            <div class="home-flashsale">
+                <div class="box-hd">
+                    <h2 class="title">小米闪购</h2>
+                </div>
+                <div class="box-bd clearfix">
+                    <div class="box left">
+                        <div class="round">10:00&nbsp;场</div>
+                        <i class="iconfont iconshandian icon"></i>
+                        <div class="desc">距离结束还有</div>
+                        <div class="desc end hide">本场已结束</div>
+                        <div class="countdown clearfix">
+                            <span class="h">00</span>
+                            <i>:</i>
+                            <span class="m">12</span>
+                            <i>:</i>
+                            <span class="s">51</span>
+                        </div>
+                    </div>
+                    <div class="swiper_box">
+                        <ul class="clearfix left swiper">
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flashsale-list">
+                        <span class="on_left">
+                            <i class="iconfont iconicon_on_the_left "></i>
+                        </span><span class="on_right">
+                            <i class="iconfont iconicon_on_the_right"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <!-- 小米闪购 end-->
+        </div>
+    </section>
+
+
+
+    <!-- page-main部分 end-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/demo.js"></script>
