--- a/demo.html
+++ b/demo.html
@@ -379,12 +379,30 @@
                 </div>
             </div>
             <!-- 小米闪购 end-->
+            <!-- title_pic部分 -->
+            <a href="#" class="title_pic">
+                <img src="./img/mi9Pro.webp" title="小米9Pro 5G">
+            </a>
+            <div class="home-brick-box">
+                <div class="box-hd">
+                    <h2 class="title">手机</h2>
+                </div>
+                <div class="box-bd">
+                    <div class="left_brick_list left">
+                        <a href="#">
+                            <img src="./img/mix_Alpha.webp" title="小米MIX Alpha">
+                        </a>
+                    </div>
+                </div>  
+            </div>
+            
+
+            <!-- title_pic end-->
         </div>
     </section>
-
-
-
     <!-- page-main部分 end-->
+        
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/demo.js"></script>
