--- a/demo.html
+++ b/demo.html
@@ -387,16 +387,146 @@
                 <div class="box-hd">
                     <h2 class="title">手机</h2>
                 </div>
-                <div class="box-bd">
+                <div class="box-bd clearfix">
                     <div class="left_brick_list left">
-                        <a href="#">
+                        <a href="#" class=" dh">
                             <img src="./img/mix_Alpha.webp" title="小米MIX Alpha">
                         </a>
                     </div>
+                    <div class="brick-list-box left">
+                        <ul class="brick-list clearfix">
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left dh">
+                                <a href="#">
+                                    <div class="brick-box">
+                                        <div class="img">
+                                            <img src="./img/mi9ccPro.webp" title="小米CC9 Pro" width="160" height="160">
+                                        </div>
+                                        <h3 class="title">小米CC9 Pro</h3>
+                                        <p class="desc">1亿像素 五摄四闪</p>
+                                        <p class="price">2799<span>元起</span></p>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>  
             </div>
-            
+            <a href="#" class="title_pic">
+                <img src="./img/miTV.webp" title="小米电视特惠">
+            </a>
+            <!-- 小米家电 -->
+            <div class="home-brick-box">
+                <div class="box-hd">
+                    <h2 class="title">家电</h2>
+                </div>
+                <div class="box-hd clearfix">
+                    <ul class="left brick-promo-left">
+                        <li class="dh">
+                            <a href="#">
+                                <img src="./img/jingshuiqi.webp" title="小米净水器">
+                            </a>
+                        </li>
+                        <li class="dh">
+                            <a href="#">
+                                <img src="./img/saodijiqiren.webp" title="米家扫地机器人">
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- <ul class="left brick-promo-right">
+                        <li class="dh">
+                            <a href="#">
+                                
+                            </a>
+                        </li>
+                    </ul> -->
+                </div> 
+            <!-- 小米家电 end-->
 
+            </div>
             <!-- title_pic end-->
         </div>
     </section>
