--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1488789_35zptodpuoe.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1488789_2hifdvk38t1.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/demo.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -1179,10 +1179,98 @@
     <footer class="footer">
         <div class="site-footer">
             <div class="container">
-                
+                <div class="footer-service">
+                    <ul class="clearfix list-service">
+                        <li class="left list"><a href="#"><i class="iconfont iconbuoumaotubiao46"></i>预约维修服务</a></li>
+                        <li class="left list"><a href="#"><i class="iconfont iconiconecitemfuzhi"></i>7天无理由退货</a></li>
+                        <li class="left list"><a href="#"><i class="iconfont icon15tianwuyouhuanhuo"></i>15天免费换货</a></li>
+                        <li class="left list"><a href="#"><i class="iconfont iconlihe"></i>满150包邮</a></li>
+                        <li class="left list"><a href="#"><i class="iconfont icondingweiweizhi"></i>520余家售后网点</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links clearfix">
+                    <table class="tab left">
+                        <thead>
+                            <tr>
+                                <th>帮助中心</th>
+                                <th>服务支持</th>
+                                <th>线下门店</th>
+                                <th>关于小米</th>
+                                <th>关注我们</th>
+                                <th>特色服务</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="#">账户管理</a></td>
+                                <td><a href="#">售后政策</a></td>
+                                <td><a href="#">小米之家</a></td>
+                                <td><a href="#">了解小米</a></td>
+                                <td><a href="#">新浪微博</a></td>
+                                <td><a href="#">F码通道</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="#">购物指南</a></td>
+                                <td><a href="#">自助服务</a></td>
+                                <td><a href="#">服务网点</a></td>
+                                <td><a href="#">加入小米</a></td>
+                                <td><a href="#">官方微信</a></td>
+                                <td><a href="#">礼物码</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="#">订单操作</a></td>
+                                <td><a href="#">相关下载</a></td>
+                                <td><a href="#">授权体验店</a></td>
+                                <td><a href="#">投资者关系</a></td>
+                                <td><a href="#">联系我们</a></td>
+                                <td><a href="#">防伪查询</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-contact left">
+                        <p class="phone">400-100-5678</p>
+                        <p class="time">周一至周日 8:00-18:00<br>（仅收市话费）</p>
+                        <a href="#"><i class="iconfont iconxiaoxi" style="margin-right: 4px;"></i>人工客服</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- <div class="site-info"></div> -->
+        <div class="site-info">
+            <div class="container clearfix">
+                <a href="#" class="clearfix logo left" title="小米官网">
+                    <span class="hide">小米官网</span>
+                    <i class="iconfont iconxiaomi mi-logo icon"></i>
+                    <i class="iconfont iconshouye mi-home icon"></i>
+                </a>
+                <div class="info-text ">
+                    <p class="sites">
+                        <a href="#">小米商城</a><span class="sep">|</span><a href="#">MIUI</a><span class="sep">|</span>
+                        <a href="#">米家</a><span class="sep">|</span><a href="#">米聊</a><span class="sep">|</span>
+                        <a href="#">多看</a><span class="sep">|</span><a href="#">游戏</a><span class="sep">|</span>
+                        <a href="#">路由器</a><span class="sep">|</span><a href="#">米粉卡</a><span class="sep">|</span>
+                        <a href="#">政企服务</a><span class="sep">|</span><a href="#">小米天猫店</a><span class="sep">|</span>
+                        <a href="#">小米集团隐私政策</a><span class="sep">|</span><a href="#">小米公司儿童信息保护规则</a><span class="sep">|</span>
+                        <a href="#">小米商城隐私政策</a><span class="sep">|</span><a href="#">小米商城用户协议</a><span class="sep">|</span>
+                        <a href="#">用户反馈</a><span class="sep">|</span><a href="#">廉正举报</a><span class="sep">|</span>
+                        <a href="#">诚信合规</a><span class="sep">|</span><a href="#">Select Location</a>
+                    </p>
+                    <p class="text">
+                        © <a href="#">mi.com</a> 京ICP证110507号<a href="#">京ICP备10046444号</a> <a href="#">京公网安备11010802020134号</a> <a href="#">京网文[2017]1530-131号</a><br>
+                        <a href="#">（京）网械平台备字（2018）第00005号</a> <a href="#">互联网药品信息服务资格证 (京) -非经营性-2014-0090</a> <a href="#">营业执照</a> <a href="#">医疗器械公告</a><br>
+                        <a href="#">增值电信业务许可证</a> 网络食品经营备案（京）【2018】WLSPJYBAHF-12<a href="#">食品经营许可证</a><br>
+                        违法和不良信息举报电话：185-0130-1238 <a href="#">知识产权侵权投诉</a> 本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+                    </p>
+                </div>
+                <div class="info-links">
+                    <a href="#"><img src="./img/truste.png"></a>
+                    <a href="#"><img src="./img/v-logo-1.png"></a>
+                    <a href="#"><img src="./img/v-logo-2.png"></a>
+                    <a href="#"><img src="./img/v-logo-3.png"></a>
+                    <a href="#"><img src="./img/v-logo-4.png"></a>
+                </div>
+                <div class="slogan">探索黑科技，小米为发烧而生</div>
+            </div>
+        </div>
     </footer>
     <!-- footer部分 end-->
 
