--- a/demo.html
+++ b/demo.html
@@ -204,9 +204,9 @@
                             <span class="s">51</span>
                         </div>
                     </div>
-                    <div class="swiper_box">
+                    <div class="swiper_box" id="swiper_box">
                         <ul class="clearfix left swiper">
-                            <li class="left item">
+                            <li class="left item a">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -222,7 +222,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item b">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -238,7 +238,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item c">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -254,7 +254,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item d">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -270,7 +270,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item a">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -286,7 +286,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item c">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -302,7 +302,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item b">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -318,7 +318,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item d">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -334,7 +334,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item c">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -350,7 +350,103 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item">
+                            <li class="left item a">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item b">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item d">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item d">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item d">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item d">
+                                <a href="#">
+                                    <div class="content">
+                                        <div class="img">
+                                            <img src="./img/shuihu.jpg" >
+                                        </div>
+                                        <h3 class="title">米家多功能电煮壶 白色</h3>
+                                        <p class="desc">汤羹粥茶 精煮慢炖</p>
+                                        <p class="price">
+                                            <span>299</span>
+                                            元
+                                            <del>399</del>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="left item d">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
