--- a/demo.html
+++ b/demo.html
@@ -197,11 +197,11 @@
                         <div class="desc">距离结束还有</div>
                         <div class="desc end hide">本场已结束</div>
                         <div class="countdown clearfix">
-                            <span class="h">00</span>
+                            <span class="h" id="h"></span>
                             <i>:</i>
-                            <span class="m">12</span>
+                            <span class="m" id="m"></span>
                             <i>:</i>
-                            <span class="s">51</span>
+                            <span class="s" id="s"></span>
                         </div>
                     </div>
                     <div class="swiper_box" id="swiper_box">
@@ -382,7 +382,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item d">
+                            <li class="left item a">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -414,7 +414,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item d">
+                            <li class="left item b">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -430,7 +430,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item d">
+                            <li class="left item a">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
@@ -446,7 +446,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="left item d">
+                            <li class="left item c">
                                 <a href="#">
                                     <div class="content">
                                         <div class="img">
