鼠标移入显示nav内容详

--- a/demo.html
+++ b/demo.html
@@ -93,7 +93,19 @@
                 <li class="site-nav-item">
                     <a href="#" class="hide">全部商品分类</a>
                     <ul class="site-category-list">
-                        <li class="nav-title"><a href="#">手机 电话卡<i class="iconfont iconicon_on_the_right icon"></i></a></li>
+                        <li class="nav-title">
+                            <a href="#">手机 电话卡<i class="iconfont iconicon_on_the_right icon"></i></a>
+                            <div class="nav-title-list clearfix">
+                                <ul class="children-list">
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                    <li><a href="#"><img src="./img/nav-title-list.webp" title="小米CC9 Pro"><span class="text">小米CC9 Pro</span></a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <li class="nav-title"><a href="#">电视 盒子<i class="iconfont iconicon_on_the_right icon"></i></a></li>
                         <li class="nav-title"><a href="#">笔记本 平板<i class="iconfont iconicon_on_the_right icon"></i></a></li>
                         <li class="nav-title"><a href="#">家电 插线板<i class="iconfont iconicon_on_the_right icon"></i></a></li>
