--- a/bilibili/index.html
+++ b/bilibili/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>bilibili首页</title>
-  <script src="../../js/vue.js"></script>
-  <script src="../../js/axios.min.js"></script>
+  <script crossorigin="anonymous" integrity="sha512-BKbSR+cfyxLdMAsE0naLReFSLg8/pjbgfxHh/k/kUC82Hy7r6HtR5hLhobaln2gcTvzkyyehrdREdjpsQwy2Jw==" src="https://lib.baomitu.com/vue/2.6.12/vue.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./assets/index.css">
 </head>
